# Los-cc

./: .clang-format  .gitignore  CMakeLists.txt  entry.S  kernel.ld  start.cc
inc/: defs.hh  types.hh
lib/: CMakeLists.txt
src/: main.cc
src/init/: start.cc
test/: CMakeLists.txt  entry_test.cc
